Ensure that DropDatabaseCoordinator stops migrations on the next collection to be dropped before persisting its identity

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0
    • Affects Version/s: 8.2.0-rc0
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2025-07-07
    • 200
    • 🟥 DDL
    • None
    • None
    • None
    • None
    • None
    • None

      The recent commit of SERVER-104887 introduced a regression in the behavior of DropDatabaseCoordinator by swapping the execution order of two steps.

      When the coordinator picks up the next tracked collection to be dropped, its identity must be persisted on the recovery document only after ensuring that it cannot be targeted by any new chunk migration - or the two operations may end up conflicting in case of a step down event of the coordinating node (since no stopMigration gets reissued upon step-up).

            Assignee:
            Paolo Polato
            Reporter:
            Paolo Polato
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: