SERVER-107015 Ensure that DropDatabaseCoordinator stops migrations on the next collection to be dropped before persisting its identity (#38044)

GitOrigin-RevId: 40394ec06da5fec8c2ada4bd2499345d9de36910